# flywheelmc-server-selfhosted

./: Cargo.toml  README.md  run_test.sh
.github/workflows/: autobuild.yml
src/: cli.rs  main.rs
