[package]
name        = "flywheelmc-server-selfhosted"
version     = "0.1.0"
authors     = ["FlywheelMC <https://github.com/FlywheelMC>"]
description = "Single-plot self-hosted FlywheelMC server software"
license     = "LGPL-3.0-only"

readme     = "README.md"
homepage   = "https://github.com/FlywheelMC"
repository = "https://github.com/FlywheelMC/flywheelmc-server-selfhosted"
publish    = false

keywords   = [ "flywheel", "mc", "minecraft", "game" ]
categories = [ "games" ]

edition      = "2024"
rust-version = "1.87"


[lints.rust]
unused_parens = "allow"


[dependencies.flywheelmc-common]
path = "../flywheelmc-common"
[dependencies.flywheelmc-players]
path = "../flywheelmc-players"
[dependencies.flywheelmc-wasm]
path = "../flywheelmc-wasm"

[dependencies.image]
version = "0.25"
[dependencies.base64]
version = "0.22"
